netpol/service-c.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
      - name: service-c
        image: busybox:1.33.1
        command: ["nc", "-lkv", "-p", "8080", "-e", "/bin/sh"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: service-c
  ports:
  - port: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-service-c
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: service-c   # to
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: staging
    - podSelector:
        matchLabels:
          app: service-b
